<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/recipe"
            android:title="@string/menu_recipe" />
    </group>
    <item android:title="Fridge advanced option">
        <menu>
            <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/new_food"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_old"
            android:icon="@drawable/old_food"
            android:title="@string/menu_old" />
        <item
            android:id="@+id/nav_put_get"
            android:icon="@drawable/put_get"
            android:title="@string/menu_put_get" />
            </group>
        </menu>
    </item>
</menu>