<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.refrigerator_checker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_put_get"
        android:name="com.example.refrigerator_checker.ui.gallery.GalleryFragment"
        android:label="@string/menu_put_get"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_today"
        android:name="com.example.refrigerator_checker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_old"
        android:name="com.example.refrigerator_checker.ui.from_oldest.From_oldestFragment"
        android:label="@string/menu_old"
        tools:layout="@layout/fragment_from_oldest" />

    <fragment
        android:id="@+id/nav_recipe"
        android:name="com.example.refrigerator_checker.ui.recipe.RecipeFragment"
        android:label="@string/menu_recipe"
        tools:layout="@layout/fragment_recipe" />
</navigation>